<resources>
    <string name="app_name">AutoMobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_setting">Setting</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_mrp">Product MRP</string>
    <string name="product_sp">Product SP</string>
    <string name="product_models">Select Models</string>
    <string name="add">Add</string>
    <string name="supplier_cancel_button">Cancel</string>
    <string name="supplier_submit_button">submit</string>
    <string name="porduct_suppliers">Select Suppliers</string>
    <string name="_admin">Admin</string>
    <string name="hint_text">phone number</string>

   <!-- navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_of_product">No of product</string>
    <string name="add_new_brand">Add new Brand</string>


    <string-array name="motor_type">
        <item>Bike </item>
        <item>Car</item>
        <item>Scooter</item>
    </string-array>
    <string-array name="product_category">
        <item>Wheels</item>
        <item>Tires</item>
        <item>Brakes</item>
        <item>Light</item>
        <item>Engine Oil</item>
        <item>Helmet</item>
        <item>Bike Cover</item>
        <item>Side mirror</item>

    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search_hint">search</string>
    <string name="brand_level">Brand</string>
    <string name="brand">Brand</string>
    <string name="category">category</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_category">Select Category</string>
</resources>
