<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="com.lovelycoding.automobile.ui.home.HomeListener" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/cardviw"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/top_margin_16dp"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/product_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/add_image_256"
                android:onClick="@{handlers::onImageSelect}" />

                <androidx.viewpager.widget.ViewPager xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/product_image_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"

                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:adjustViewBounds="true"
                    android:onClick="@{handlers::onClickSelectImage}"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add_circle_red_48"
                    android:visibility="gone" />
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_motor_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/top_margin_16dp"
                android:entries="@array/motor_type"
                android:paddingVertical="@dimen/top_margin_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardviw" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBrand"
                android:text="@string/select_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/top_margin_16dp"
                android:paddingVertical="@dimen/top_margin_16dp"
                android:onClick="@{handlers::onSelectBrand}"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner_motor_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCategory"
                android:text="@string/select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/top_margin_16dp"
                android:paddingVertical="@dimen/top_margin_16dp"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvBrand"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/top_margin_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCategory">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_descripton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/top_margin_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_16dp"
                    android:background="@drawable/border"
                    android:hint="@string/product_description"
                    android:lines="5"
                    android:paddingLeft="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_mrp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/top_margin_16dp"

                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:hint="@string/product_mrp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/til_product_sp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_descripton">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_mrp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/border"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/top_margin_16dp"
                android:layout_marginStart="24dp"
                android:gravity="center"
                android:hint="@string/product_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/til_product_mrp"
                app:layout_constraintTop_toBottomOf="@+id/til_product_descripton">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/border"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/tv_minus"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/top_margin_16dp"
                android:background="@drawable/border"
                android:onClick="@{handlers::minusProductCount}"
                android:src="@drawable/ic_remove_blue_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_mrp" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_count"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/top_margin_16dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:paddingVertical="8dp"
                android:text="0"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_minus"
                app:layout_constraintTop_toBottomOf="@+id/til_product_sp" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/tv_add_product_count"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/top_margin_16dp"
                android:onClick="@{handlers::addProductCount}"
                android:src="@drawable/ic_add_blue_24dp"
                app:layout_constraintStart_toEndOf="@+id/product_count"
                app:layout_constraintTop_toBottomOf="@+id/til_product_sp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="@dimen/top_margin_16dp"
                android:onClick="@{handlers::onClickSaveToDatabase}"
                android:padding="10dp"
                android:text="@string/add"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_count" />


            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progress_circular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardviw" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>